@@ -6,10 +6,11 @@ Release history for Dist-Zilla-Plugin-Prereqs-MatchInstalled-All
  - configure: ↓1
  - develop: +8 ↑2 -3 (suggests: +2 -1)
  - runtime: +1
- - test: +1 -3 (recommends: ↑2 -1)
+ - test: +2 -7 (recommends: ↑2 -1)
 
  [Internals]
  - Implement dump_config with config_dumper
+ - Implement tests with dztest
 
  [Metadata]
  - Show 1x Contributor
